<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="#f6f6f6"
    tools:context=".ContactActivity">

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="20dp"

           android:orientation="vertical">
           <TextView
               android:id="@+id/simpleTextView"
               android:layout_width="wrap_content"
               android:text="@string/email"
               android:paddingBottom="10dp"
               android:layout_height="wrap_content"/>
           <EditText
               style="@style/edit_text"
               android:background="@drawable/testing_gradient"
               android:hint="@string/email"
               android:drawableLeft="@drawable/message"
               android:drawableStart="@drawable/message" />

           <TextView

               android:layout_width="wrap_content"
               android:text="@string/phone"
               android:layout_marginTop="15dp"

               android:paddingBottom="10dp"
               android:layout_height="wrap_content"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="60dp"

               android:background="@drawable/testing_gradient"
               android:weightSum="100">

               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="30"
                   android:gravity="center">

                   <ImageView
                       android:layout_width="23dp"
                       android:layout_height="23dp"
                       android:layout_marginStart="10dp"
                       android:layout_gravity="center"
                       app:srcCompat="@drawable/phone" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="24dp"
                       android:paddingStart="8dp"
                       android:textColor="@color/gray_2"
                       android:layout_gravity="center"
                       android:text="+234" />

                   <view
                       android:layout_width="1dp"
                       android:layout_height="20dp"
                       android:layout_gravity="center"
                       android:background="@color/gray_color"
                       android:layout_margin="8dp"/>

               </LinearLayout>

               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_weight="75"
                   >

                   <EditText
                       android:id="@+id/mobile_number"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:background="@null"
                       android:fontFamily="@font/gotham"
                       android:hint="80-3345-8907"
                       android:inputType="phone"
                       android:maxLength="10"
                       android:padding="12dp"
                       android:textColor="#000000"
                       android:textColorHint="#c7c7c8"
                       android:textSize="16sp" />

               </LinearLayout>


           </LinearLayout>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="15dp"
               android:paddingBottom="10dp"
               android:text="@string/state" />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:background="@drawable/testing_gradient">

               <Spinner
                   android:layout_width="match_parent"
                   android:layout_height="60dp"
                   android:textColor="@color/colorAccent"
                   android:paddingBottom="13dp" />
           </LinearLayout>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="15dp"
               android:paddingBottom="10dp"
               android:text="@string/city" />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="60dp"
               android:background="@drawable/testing_gradient">

               <Spinner
                   android:layout_width="match_parent"
                   android:layout_height="60dp"
                   android:textColor="@color/colorAccent"
                   android:paddingBottom="13dp" />
           </LinearLayout>

           <TextView
               android:layout_width="wrap_content"
               android:text="Address"
               android:layout_marginTop="15dp"
               android:paddingBottom="10dp"
               android:layout_height="wrap_content"/>
           <EditText
               android:id ="@+id/edtInput"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:lines="10"
               android:minLines="5"
               android:paddingTop="14dp"
               android:paddingStart="10dp"
               android:maxLines="15"
               android:background="@drawable/testing_gradient"
               android:gravity="top|start"

               android:inputType="textCapSentences|textMultiLine"
               android:textSize="14sp"
               android:hint ="@string/address"
               />

           <TextView
               android:layout_width="wrap_content"
               android:text="Select Preferred Branch "
               android:paddingBottom="10dp"
               android:layout_marginTop="15dp"
               android:layout_height="wrap_content"/>
           <EditText
               style="@style/edit_text"
               android:background="@drawable/testing_gradient"
               android:hint="Type in branch name"
               android:drawableEnd="@drawable/map_icon"
               />
           <ImageButton
               android:id="@+id/btn"
               android:layout_width="80dp"
               android:layout_height="80dp"
               android:layout_marginTop="15dp"
               android:layout_gravity="end"
               android:background="@drawable/circle_shadow"
               app:srcCompat="@drawable/comment"
            />

           <Button
               android:id="@+id/generate_otp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"

               android:layout_marginTop="20dp"
               android:background="@drawable/buttonshape"
               android:fontFamily="@font/gotham"
               android:text="Next"
               android:textAllCaps="false"
               android:textColor="#ffffff"
               android:textSize="13sp" />


       </LinearLayout>
   </androidx.core.widget.NestedScrollView>


</LinearLayout>